[package]
name = "project4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
average = "0.14.1"
clap = { version = "4.4.13", features = ["cargo"] }
crossterm = "0.27.0"
plotters = "0.3.5"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
